--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
   },
   "peerDependencies": {
     "typescript": "^5"
+  },
+  "dependencies": {
+    "@elysiajs/bearer": "^1.4.1",
+    "@elysiajs/jwt": "^1.4.0",
+    "elysia": "^1.4.12"
   }
 }
