--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "start": "bun run index.ts"
+    "start": "bun run index.ts",
+    "server": "bun --watch ./api/server.ts"
   },
   "devDependencies": {
     "@types/bun": "latest"
   },
   "peerDependencies": {
-    "typescript": "^5"
+    "typescript": "^5.9.3"
   },
   "dependencies": {
     "@elysiajs/bearer": "^1.4.1",
     "@elysiajs/jwt": "^1.4.0",
+    "@elysiajs/openapi": "^1.4.11",
     "elysia": "^1.4.12"
   }
 }
